2010/11/29: created branch from trunk r10868

